--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <aside>
+    <header>
         <h1>Artificial intelligence</h1>
-    </aside>
+    </header>
     <p>From Wikipedia, the free encyclopedia</p>
     <blockquote> "AI" redirects here. For other uses, see 
         <a href="https://en.wikipedia.org/wiki/AI_(disambiguation)" target="_blank">AI (disambiguation), </a> 
@@ -34,21 +34,24 @@
     <header>
         <img src="./assets/artificial-intelligence-ai-processor.jpg" alt="Artificial intelligence"/>
     </header>
+    <article>
     <h2>Content</h2>
-    <ul>
-        <li><i>Reasoning and problem solving</i></li>
-        <li><i>General intelligence</i></li>            <li><i>Learning</i></li>
-    </ul>
+        <ul>
+            <li><i>Reasoning and problem solving</i></li>
+            <li><i>General intelligence</i></li>            
+            <li><i>Learning</i></li>
+        </ul>
+    </article>
     <article>
         <h2>Reasoning and problem solving</h2>
+        <p>
+            Early researchers developed algorithms that imitated step-by-step reasoning that humans use when they solve puzzles or make logical
+            <a href="https://en.wikipedia.org/wiki/Deductive_reasoning" target="_blank">deductions.</a> By the late 1980s and 1990s, methods were developed for dealing with 
+            <a href="https://en.wikipedia.org/wiki/Uncertainty" target="_blank">uncertain</a> or incomplete information, employing concepts from
+            <a href="https://en.wikipedia.org/wiki/Probability" target="_blank">probability</a> and 
+            <a href="https://en.wikipedia.org/wiki/Economics" target="_blank">economics</a>
+        </p>
     </article>
-    <p>
-        Early researchers developed algorithms that imitated step-by-step reasoning that humans use when they solve puzzles or make logical
-        <a href="https://en.wikipedia.org/wiki/Deductive_reasoning" target="_blank">deductions.</a> By the late 1980s and 1990s, methods were developed for dealing with 
-        <a href="https://en.wikipedia.org/wiki/Uncertainty" target="_blank">uncertain</a> or incomplete information, employing concepts from
-        <a href="https://en.wikipedia.org/wiki/Probability" target="_blank">probability</a> and 
-        <a href="https://en.wikipedia.org/wiki/Economics" target="_blank">economics</a>
-    </p>
     <p>
         Many of these algorithms are insufficient for solving large reasoning problems because they experience a "combinatorial explosion": 
         they became exponentially slower as the problems grew larger. Even humans rarely use the step-by-step deduction that early 
@@ -56,21 +59,21 @@
     </p>
     <article>
         <h2>General intelligence</h2>
+        <p>
+            A machine with
+            <a href="https://en.wikipedia.org/wiki/Artificial_general_intelligence" target="_blank">artificial general intelligence</a> 
+            should be able to solve a wide variety of problems with breadth and versatility similar to human intelligence.
+        </p>
     </article>
-    <p>
-        A machine with
-        <a href="https://en.wikipedia.org/wiki/Artificial_general_intelligence" target="_blank">artificial general intelligence</a> 
-        should be able to solve a wide variety of problems with breadth and versatility similar to human intelligence.
-    </p>
     <p><i>Techniques</i></p>
     <p>AI research uses a wide variety of techniques to accomplish the goals above.</p>
     <article>
         <h2>Learning</h2>
+        <p>
+            <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank">Machine learning</a> is the study of programs that can improve their performance on a given task automatically. It has been a part of 
+            <abbr title="Artificial intelligence">AI</abbr> from the beginning.
+        </p>
     </article>
-    <p>
-        <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank">Machine learning</a> is the study of programs that can improve their performance on a given task automatically. It has been a part of 
-        <abbr title="Artificial intelligence">AI</abbr> from the beginning.
-    </p>
     <p>
         There are several kinds of machine learning. 
         <a href="https://en.wikipedia.org/wiki/Unsupervised_learning" target="_blank">Unsupervised learning</a> analyzes a stream of data and finds patterns and makes predictions without any other guidance.
